<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePassword">

    <EditText
        android:id="@+id/editTextTunnus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/k_ytt_tunnus"
        android:inputType="textPersonName"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="179dp"
        android:text="@string/vaihda_salasana" />

    <EditText
        android:id="@+id/editTextOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextTunnus"
        android:ems="10"
        android:hint="@string/vanha_salasana"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextOldPassword"
        android:ems="10"
        android:hint="@string/uusi_salasana"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextNewPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextNewPassword"
        android:ems="10"
        android:hint="@string/salasana_toisen_kerran"
        android:inputType="textPassword" />
</RelativeLayout>